// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Radio needs only label and onChange by default.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <label
                checked={false}
                className="Radio__Label-sc-5lanou-6 jZYznP"
              >
                <input
                  checked={false}
                  className="Radio__Input-sc-5lanou-5 juylbO"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                />
                <div
                  className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                >
                  <span
                    className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-sc-5lanou-2 hNfBAd"
                >
                  <span
                    className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                  >
                    Label
                  </span>
                </div>
              </label>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Playground of Radio
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <label
                checked={true}
                className="Radio__Label-sc-5lanou-6 chZGQX"
              >
                <input
                  checked={true}
                  className="Radio__Input-sc-5lanou-5 juylbO"
                  data-test="test"
                  disabled={true}
                  name="name"
                  onChange={[Function]}
                  type="radio"
                  value="value"
                />
                <div
                  className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                >
                  <span
                    className="Radio__Glyph-sc-5lanou-0 kLRDHO"
                    disabled={true}
                  />
                </div>
                <div
                  className="Radio__TextContainer-sc-5lanou-2 hNfBAd"
                >
                  <span
                    className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                  >
                    Label
                  </span>
                  <span
                    className="Radio__Info-sc-5lanou-3 kUWoHR"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            disabled
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            hasError
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            name
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                name
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Additional information for this choice
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              This is a preview of this component in RTL setup.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <label
                checked={true}
                className="Radio__Label-sc-5lanou-6 jZYznP"
              >
                <input
                  checked={true}
                  className="Radio__Input-sc-5lanou-5 juylbO"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="value"
                />
                <div
                  className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                >
                  <span
                    className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-sc-5lanou-2 QKAgd"
                >
                  <span
                    className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                  >
                    <p
                      className="Text__StyledText-sc-19qtt4y-0 huZevl"
                    >
                      Lorem ipsum dolor sit 
                      <a
                        className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                        rel=""
                      >
                        amet
                      </a>
                      .
                    </p>
                  </span>
                </div>
              </label>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Text /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              checked
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  value
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onChange
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  changed
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio With TextLink in label 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With TextLink in label
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Additionally you can add info to this component.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <label
                checked={true}
                className="Radio__Label-sc-5lanou-6 jZYznP"
              >
                <input
                  checked={true}
                  className="Radio__Input-sc-5lanou-5 juylbO"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="value"
                />
                <div
                  className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                >
                  <span
                    className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-sc-5lanou-2 hNfBAd"
                >
                  <span
                    className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                  >
                    <p
                      className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                    >
                      Lorem ipsum dolor sit 
                      <a
                        className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                        rel=""
                      >
                        amet
                      </a>
                      .
                    </p>
                  </span>
                </div>
              </label>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Text /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Additionally you can add info to this component.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <label
                checked={false}
                className="Radio__Label-sc-5lanou-6 jZYznP"
              >
                <input
                  checked={false}
                  className="Radio__Input-sc-5lanou-5 juylbO"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="value"
                />
                <div
                  className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                >
                  <span
                    className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-sc-5lanou-2 hNfBAd"
                >
                  <span
                    className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                  >
                    Label
                  </span>
                  <span
                    className="Radio__Info-sc-5lanou-3 kUWoHR"
                  >
                    Additional information to this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Additional information to this choice
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
